# handwriting-synthesis

./: .gitignore  TODO.md  main.py  pyproject.toml  readme.md  report.txt  requirements.txt  viewer.py
GUI/: Application.py
GUI/SVG/: NotebookPaperGenerator.py  VectorGraphic.py
GUI/Views/: SVGCanvasView.py
GUI/Widgets/: HandwritingControls.py  HandwritingInput.py  NotebookPaperControls.py  ScaleControl.py  SpacingControl.py
GUI/Widgets/Templates/: LabeledSliderSpinBox.py
GUI/Workers/: HandwritingWorker.py
SVG/: AbsoluteVectorGraphic.py  Handwriting.py  NotebookPaperGenerator.py  Units.py
SVG/Transform/: HandwritingGroup.py  TransformHandles.py
synthesizer/: demo.py  hand.py
synthesizer2/: rnn.py  tf_base_model.py
synthesizer_tf2/: demo.py  hand.py  rnn_cell.py  rnn_ops.py  tf_base_model.py
