[project]
name = "handwriting-synthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drawsvg>=2.4.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "svgwrite>=1.4.3",
    "tensorflow>=2.21.0",
    "tensorflow-probability>=0.25.0",
    "tf-keras>=2.21.0",
]
